# CRASH

./: .gitignore  .gitmodules  Avatar.sln
FrontEnd/build-testQt-Desktop_Qt_5_13_1_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_loginpage.h  ui_mainwindow.h
FrontEnd/build-testQt-Desktop_Qt_5_13_1_clang_64bit-Debug/: Makefile
FrontEnd/testQt/: Resources.qrc  StockGenerator.cpp  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testQt.pro  testQt.pro.user.f3a83df
FruntEhnd/: FruntEhnd.sln
backend/: Backend.sln  Backend.vcxproj  Backend.vcxproj.filters  CMakeLists.txt  ClassDiagram.cd  main.cpp  main.h
backend/client/: a.out  both.c  entry.cpp  entry.h  makefile  net.cpp  net.h  whore.c
backend/core/: GameHost.cpp  Round.cpp  Round.h  User.cpp  User.h
backend/old/alpha/: CMakeLists.txt
backend/old/alpha/core/: UserHost.cpp  UserHost.h
backend/old/alpha/src/: main.cpp  main.h
backend/old/alpha/src/core/: GameHost.cpp  Player.cpp  Player.fwd.h  Player.h  PlayerStatus.h  ResultType.h  Round.cpp  Round.fwd.h  RoundResult.cpp  RoundResult.h
backend/old/alpha/src/web/: Client.cpp  Server.cpp  Server.h
backend/old/beta/: main.cpp
backend/old/delta/: socket_client.c
backend/old/gamma/: CMakeLists.txt
backend/old/gamma/Client/: CMakeLists.txt  Client.cpp  Client.vcxproj  Client.vcxproj.filters  main.cpp
backend/old/gamma/Server/: CMakeLists.txt  Client.h  Server.cpp  Server.h  Server.sln  Server.vcxproj  main.cpp
backend/old/gamma/server/: makefile
backend/old/stockstuff/: Stock_CSV_Reader.cpp  Stock_CSV_Reader.h  Stonks.h
backend/round/: Player.cpp  Player.h  RoundLogic.cpp  RoundLogic.h  StockGenerator.cpp  StockGenerator.h
backend/server/: Server.cpp  Server.h  a.out  entry.cpp  makefile
backend/server/round/: Game.cpp  Game.h  Player.cpp  Player.h  RoundLogic.cpp  RoundLogic.h  StockGenerator.cpp  StockGenerator.h
backend/server/round/.metadata/: version.ini
backend/server/round/.metadata/.plugins/org.eclipse.cdt.core/: Buyout.language.settings.xml  HelloWorld.language.settings.xml
backend/server/round/.metadata/.plugins/org.eclipse.core.resources/.projects/HelloWorld/.indexes/: properties.index
backend/server/round/.metadata/.plugins/org.eclipse.core.resources/.projects/HelloWorld/org.eclipse.egit.core/: GitProjectData.properties
backend/server/round/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
backend/server/round/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
backend/server/round/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
backend/server/round/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
backend/server/round/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2019/11/47/: refactorings.history  refactorings.index
backend/server/round/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
backend/server/round/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
backend/server/round/HelloWorld/: .cproject
backend/src/: main.cpp
backend/src/core/: GameHost.h  Player.cpp  Player.h  PlayerStatus.h  Round.h  RoundStatus.h
backend/src/web/: Client.cpp  Client.h  Server.cpp
backend/web/: server.cpp  server.h
backend/winclient/: Client.cpp  Client.h  main.cpp  makefile
build-testQt-Desktop_Qt_5_13_1_clang_64bit-Debug/: moc_mainwindow.cpp  moc_qcustomplot.cpp
docs/: CMPE 320 Final Group Presentation.pptx  rest.pptx  tools.txt  ~$CMPE 320 Final Group Presentation.pptx
stockstuff/: CompanyNames.txt  Stock_CSV_Reader2.cpp  Stock_CSV_Reader2.h  Stonks.cpp
testQt/: mainwindow.cpp  testQt.pro
(+31 files in other folders)
